# untitled_game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: asset.h  camera.h  chunk.h  debug.h  perlin.h  quadtree.h  rect_pack.h  utils.h
include/graphics/: canvas.h  common.h  font.h  gui.h  mesh.h  mesh_builder.h  model.h  object.h  shader.h  texture.h
include/luvoasi/: event.h  luvoasi.h  window.h
include/luvoasi/core/: base.h  types.h
include/luvoasi/graphics/: api.h  buffer.h  context.h  shader.h  texture.h  vertex_array.h
include/luvoasi/gui/: font.h  gui.h
include/luvoasi/map/: map.h
include/luvoasi/rendering/: model.h  renderer.h
include/luvoasi/utils/: rect_pack.h
libs/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/: atlas.toml  block_types.xml  frag.glsl  minecraft_atlas.json  minecraft_atlas.xml  save_file.xml  shader.fs  vert.glsl
res/textures/minecraft_atlas/: asset.xml
res_temp/: assets.xml  memo.md  save_file.xml  test.wsd
src/: asset.cpp  asset.tcc  camera.cpp  chunk.cpp  main.cpp  rect_pack.cpp  utils.cpp
src/graphics/: canvas.cpp  font.cpp  gui.cpp  mesh.cpp  mesh.tcc  mesh_builder.cpp  model.cpp  shader.cpp  texture.cpp
src/luvoasi/: event.tcc  window.cpp
src/luvoasi/core/: types.cpp
src/luvoasi/graphics/: buffer.cpp  shader.cpp  shader.tcc  texture.cpp
src/luvoasi/gui/: font.cpp
src/luvoasi/rendering/: renderer.cpp
src/luvoasi/utils/: rect_pack.cpp  va_builder.cpp
test/: CMakeLists.txt  event.cpp  main.cpp  test2.cpp
